style.css
body {
    min-height: 100vh;
    min-width: 100vw;
    background-color: rgb(255, 217, 0);

}

.jumbotron {
    padding: 5%;
    background-image: url(https://wp-media.petersons.com/blog/wp-content/uploads/2019/12/31125222/iStock-1125733916-2.jpg);
    background-size: cover;
    background-position: center;
    color: white;
}

.col-lg-8 {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
}

.container {
    background-color: orange;
    text-align: center;
    margin-top: 5vh;
    padding-bottom: 100px;
    padding-top: 25px;
}

.box {
    border-style: solid;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    margin-bottom: 5px;
    color: orange;
    font-style: bold;
    padding: 60px;
    background-repeat: no-repeat;
    background-size: cover;
    font-size: 30px;
    font-weight: 1000;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: rgb(44, 44, 44);
    border-color: white;
    
}

.row {
    padding-left: 10px;
    padding-right: 10px;
}

/* cusine type images */
.American {
    background-image: url("./imgs/american-hotdogs.jpg");
}

.BBQ {
    background-image: url("./imgs/bbq.jpg");
}

.Bar {
    background-image: url("./imgs/barfood.jpg");
}

.Breakfast {
    background-image: url("./imgs/breakfast.jpg");
}

.Chinese {
    background-image: url("./imgs/chinese.jpg");
}

.Desserts {
    background-image: url("./imgs/dessers.jpg");
}

.Fast {
    background-image: url("./imgs/fast-food.jpg");
}

.Ice {
    background-image: url("./imgs/ice-cream.jpg");
}

.Pizza {
    background-image: url("./imgs/pizza.jpg");
}

.Seafood {
    background-image: url("./imgs/seafood.jpg");
}


/* result card styling */

img {
    height: auto;
    width: 100%;
}

.card {
    margin: 20px auto;
    
}

.card-deck {
    display: flex;
}


/* snall screen styling */
@media (max-width: 600px) {
    html, body {
        max-width: 100vw;
        overflow-x: hidden;
    }
    .container {
        max-width: 100vw;
        padding-left: 0 !important;
        padding-right: 0 !important;
    }
    .box {
        background-image: none;
        padding: 10px;
        font-size: 20px;
        background-color: orangered;
    }

    .row {
        max-width: 90vw;
        padding-left: 0px;
        padding-right: 0px;
        margin-left: auto;
        margin-right: auto;
    }

    /* display card */
    .card-deck {
        display: inline
    }
  }

